Fixed forum_layout spacing error

--- a/resources/sass/forum/categories.scss
+++ b/resources/sass/forum/categories.scss
@@ -1,7 +1,5 @@
 @import '../libs';
 @import url('https://fonts.googleapis.com/css?family=Alegreya|Grenze&display=swap');
-body {
-}
 .category-link {
     height: auto;
     display: block;
@@ -27,10 +25,8 @@ h1 {
     transform: translateX(-50%);
 }
 #add-category {
-    margin-bottom: 0 !important;
     text-align: center;
     h1 {
-        margin-bottom: 0 !important;
     font-size: 1rem;
     }
 }
@@ -46,7 +42,6 @@ i {
     margin-left: 1px;
 }
 a {
-    outline: 0;
     text-decoration: none;
 }
 
